--- a/index.html
+++ b/index.html
@@ -1,96 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feria Virtual de Emprendedores</title>
   <style>
+    :root {
+      --color1: #da6863;
+      --color2: #4d3069;
+      --color3: #24496e;
+      --color4: #f3efdc;
+    }
+
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #f3efdc;
-      color: #24496e;
-    }
-
-    /* Pantalla de bienvenida */
-    #welcome {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: linear-gradient(160deg, #da6863, #4d3069, #24496e);
-      color: #f3efdc;
-      text-align: center;
-      padding: 2rem;
-    }
-
-    #welcome img {
-      max-width: 150px;
-      margin-bottom: 1rem;
-    }
-
-    #welcome h1 {
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
-    }
-
-    #welcome button {
-      background: #f3efdc;
-      color: #24496e;
-      padding: 0.8rem 2rem;
-      font-size: 1.1rem;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      font-weight: bold;
-      margin-top: 1rem;
-      transition: 0.3s;
-    }
-
-    #welcome button:hover {
-      background: #da6863;
-      color: #fff;
-    }
-
-    /* App */
-    #app {
-      display: none;
+      font-family: Arial, sans-serif;
+      background: var(--color4);
+      color: var(--color3);
     }
 
     header {
-      background: #4d3069;
+      background: var(--color2);
       color: white;
+      padding: 10px;
       text-align: center;
-      padding: 1rem;
+    }
+
+    header img {
+      max-height: 60px;
+      display: block;
+      margin: 0 auto 10px;
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 1.4rem;
     }
 
     .filters {
       display: flex;
       justify-content: center;
-      margin: 1rem;
+      margin: 15px;
     }
 
     .filters select {
-      padding: 0.5rem;
-      border-radius: 6px;
-      border: 1px solid #24496e;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid var(--color2);
       font-size: 1rem;
+      width: 90%;
+      max-width: 400px;
     }
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 1rem;
-      padding: 1rem;
+      grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+      gap: 10px;
+      padding: 10px;
     }
 
     .card {
       background: white;
       border-radius: 3%;
-      padding: 1rem;
+      padding: 15px;
       text-align: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      box-shadow: 0px 2px 6px rgba(0,0,0,0.15);
       cursor: pointer;
       transition: transform 0.2s;
     }
@@ -99,21 +73,18 @@
       transform: scale(1.05);
     }
 
-    .card-horizontal {
+    .card.horizontal {
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      padding: 1rem;
-      margin: 0.5rem 1rem;
-      background: white;
+      justify-content: flex-start;
       border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      cursor: pointer;
+      padding: 12px;
+      margin-bottom: 10px;
     }
 
-    .icon {
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
+    .card.horizontal h3 {
+      margin: 0 0 0 10px;
+      font-size: 1rem;
     }
 
     /* Modal */
@@ -121,193 +92,154 @@
       display: none;
       position: fixed;
       z-index: 1000;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0,0,0,0.6);
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
       justify-content: center;
       align-items: center;
     }
 
     .modal-content {
-      background: #fff;
-      padding: 1.5rem;
+      background: white;
+      padding: 20px;
       border-radius: 12px;
-      width: 90%;
       max-width: 400px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      width: 90%;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
     }
 
     .modal-content h2 {
       margin-top: 0;
-      color: #4d3069;
+      color: var(--color2);
     }
 
     .modal-content a {
       display: block;
-      margin: 0.5rem 0;
-      color: #da6863;
-      font-weight: bold;
+      margin: 8px 0;
+      color: var(--color3);
       text-decoration: none;
+      font-weight: bold;
     }
 
     .close {
       float: right;
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       cursor: pointer;
-      color: #24496e;
+      color: var(--color1);
     }
   </style>
 </head>
 <body>
-  <!-- Pantalla inicial -->
-  <div id="welcome">
-    <!-- Cambiar src por tu logo -->
-    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0a/No-image-available.png" alt="Logo Docentes Brown">
+  <header>
+    <img src="logoferia.png" alt="Logo Feria">
     <h1>Feria Virtual de Emprendedores</h1>
-    <p>Creada por Docentes Brown</p>
-    <button onclick="startApp()">Ingresar a la feria</button>
+  </header>
+
+  <div class="filters">
+    <select id="filter">
+      <option value="rubros">Orden alfabético - Rubros</option>
+      <option value="emprendedores">Orden alfabético - Emprendedores</option>
+    </select>
   </div>
 
-  <!-- App -->
-  <div id="app">
-    <header>
-      <h1>Feria Virtual de Emprendedores</h1>
-    </header>
-
-    <div class="filters">
-      <select id="filterMode">
-        <option value="rubros">Orden Alfabético - Rubros</option>
-        <option value="emprendedores">Orden Alfabético - Emprendedores</option>
-      </select>
-    </div>
-
-    <div id="content"></div>
-  </div>
+  <div id="cards" class="grid"></div>
 
   <!-- Modal -->
   <div id="modal" class="modal">
     <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2 id="modal-title"></h2>
-      <a id="modal-instagram" target="_blank">Instagram</a>
-      <a id="modal-whatsapp" target="_blank">WhatsApp</a>
-      <p id="modal-descuento"></p>
-      <p id="modal-docente"></p>
+      <span id="closeModal" class="close">&times;</span>
+      <h2 id="modalName"></h2>
+      <a id="modalInsta" href="#" target="_blank">Instagram</a>
+      <a id="modalWpp" href="#" target="_blank">WhatsApp</a>
+      <p id="modalDescuento"></p>
+      <p id="modalDocente"></p>
     </div>
   </div>
 
   <script>
-    const sheetId = "1B9t5EufUO848bFwv7tLJMt6mnh3qyeHXrZf5PKfCXuQ";
-    const sheetUrl = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`;
+    const SHEET_ID = "1B9t5EufUO848bFwv7tLJMt6mnh3qyeHXrZf5PKfCXuQ";
+    const SHEET_URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json`;
 
     let data = [];
-
-    // Diccionario de íconos según rubro
-    const icons = {
-      "Pastelería": "🍰",
-      "Gastronomía": "🍽️",
-      "Indumentaria": "👗",
-      "Accesorios": "💍",
-      "Tecnología": "💻",
-      "Deco": "🪴",
-      "Librería": "📚",
-      "Salud y Bienestar": "💆‍♀️",
-      "Arte": "🎨",
-      "Servicios": "⚙️",
-      "Otro": "📦"
-    };
-
-    function startApp() {
-      document.getElementById("welcome").style.display = "none";
-      document.getElementById("app").style.display = "block";
-      loadData();
-    }
+    let currentView = "rubros";
 
     async function loadData() {
-      const res = await fetch(sheetUrl);
+      const res = await fetch(SHEET_URL);
       const text = await res.text();
-      const json = JSON.parse(text.substr(47).slice(0,-2));
+      const json = JSON.parse(text.substr(47).slice(0, -2));
       data = json.table.rows.map(r => ({
         emprendimiento: r.c[0]?.v || "",
-        rubro: r.c[1]?.v || "Otro",
+        rubro: r.c[1]?.v || "",
         instagram: r.c[2]?.v || "",
         whatsapp: r.c[3]?.v || "",
         descuento: r.c[4]?.v || "",
         docente: r.c[5]?.v || ""
       }));
-      render();
+      renderRubros();
     }
 
-    function render() {
-      const mode = document.getElementById("filterMode").value;
-      const content = document.getElementById("content");
-      content.innerHTML = "";
-
-      if (mode === "rubros") {
-        const rubros = [...new Set(data.map(d => d.rubro))].sort();
-        const grid = document.createElement("div");
-        grid.className = "grid";
-        rubros.forEach(r => {
-          const card = document.createElement("div");
-          card.className = "card";
-          const icon = icons[r] || icons["Otro"];
-          card.innerHTML = `<div class="icon">${icon}</div><div>${r}</div>`;
-          card.onclick = () => showEmprendedoresPorRubro(r);
-          grid.appendChild(card);
-        });
-        content.appendChild(grid);
-      } else {
-        const emprendedores = [...data].sort((a,b)=>a.emprendimiento.localeCompare(b.emprendimiento));
-        emprendedores.forEach(e => {
-          const card = document.createElement("div");
-          card.className = "card-horizontal";
-          card.innerHTML = `<div>${e.emprendimiento}</div>`;
-          card.onclick = () => showModal(e);
-          content.appendChild(card);
-        });
-      }
+    function renderRubros() {
+      currentView = "rubros";
+      const container = document.getElementById("cards");
+      container.className = "grid";
+      const rubros = [...new Set(data.map(d => d.rubro))].sort();
+      container.innerHTML = rubros.map(r => `
+        <div class="card" onclick="renderEmprendedores('${r}')">
+          <h3>${r}</h3>
+        </div>
+      `).join("");
     }
 
-    function showEmprendedoresPorRubro(rubro) {
-      const emprendedores = data.filter(d => d.rubro === rubro).sort((a,b)=>a.emprendimiento.localeCompare(b.emprendimiento));
-      const content = document.getElementById("content");
-      content.innerHTML = "";
-
-      const grid = document.createElement("div");
-      grid.className = "grid";
-      emprendedores.forEach(e => {
-        const card = document.createElement("div");
-        card.className = "card";
-        card.innerHTML = `<div>${e.emprendimiento}</div>`;
-        card.onclick = () => showModal(e);
-        grid.appendChild(card);
-      });
-
-      content.appendChild(grid);
+    function renderEmprendedores(rubro) {
+      const container = document.getElementById("cards");
+      container.className = "grid";
+      const emps = data.filter(d => d.rubro === rubro).sort((a,b)=>a.emprendimiento.localeCompare(b.emprendimiento));
+      container.innerHTML = emps.map(e => `
+        <div class="card" onclick="showModal('${e.emprendimiento}')">
+          <h3>${e.emprendimiento}</h3>
+        </div>
+      `).join("");
     }
 
-    function showModal(emp) {
-      document.getElementById("modal-title").innerText = emp.emprendimiento;
-      document.getElementById("modal-instagram").href = emp.instagram;
-      document.getElementById("modal-instagram").innerText = emp.instagram;
-      document.getElementById("modal-whatsapp").href = emp.whatsapp;
-      document.getElementById("modal-whatsapp").innerText = emp.whatsapp;
-      document.getElementById("modal-descuento").innerText = "Descuento: " + emp.descuento;
-      document.getElementById("modal-docente").innerText = "Docente/Auxiliar: " + emp.docente;
+    function renderEmprendedoresAll() {
+      currentView = "emprendedores";
+      const container = document.getElementById("cards");
+      container.className = "";
+      const emps = [...data].sort((a,b)=>a.emprendimiento.localeCompare(b.emprendimiento));
+      container.innerHTML = emps.map(e => `
+        <div class="card horizontal" onclick="showModal('${e.emprendimiento}')">
+          <h3>${e.emprendimiento}</h3>
+        </div>
+      `).join("");
+    }
 
+    function showModal(name) {
+      const empr = data.find(d => d.emprendimiento === name);
+      if (!empr) return;
+      document.getElementById("modalName").textContent = empr.emprendimiento;
+      document.getElementById("modalInsta").href = empr.instagram.startsWith("http") ? empr.instagram : `https://instagram.com/${empr.instagram.replace("@","")}`;
+      document.getElementById("modalWpp").href = empr.whatsapp.startsWith("http") ? empr.whatsapp : `https://wa.me/${empr.whatsapp.replace(/[^0-9]/g,"")}`;
+      document.getElementById("modalDescuento").textContent = `Descuento: ${empr.descuento}`;
+      document.getElementById("modalDocente").textContent = `Docente/Auxiliar: ${empr.docente}`;
       document.getElementById("modal").style.display = "flex";
     }
 
-    document.querySelector(".close").onclick = () => {
+    document.getElementById("closeModal").onclick = () => {
       document.getElementById("modal").style.display = "none";
     };
 
-    window.onclick = e => {
-      if (e.target == document.getElementById("modal")) {
+    document.getElementById("filter").onchange = (e) => {
+      if (e.target.value === "rubros") renderRubros();
+      else renderEmprendedoresAll();
+    };
+
+    window.onclick = (e) => {
+      if (e.target === document.getElementById("modal")) {
         document.getElementById("modal").style.display = "none";
       }
     };
 
-    document.getElementById("filterMode").addEventListener("change", render);
+    loadData();
   </script>
 </body>
 </html>
