--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       justify-content: center;
       height: 100vh;
       text-align: center;
-      background: linear-gradient(to top, var(--color1) 50%, var(--color1) 50%);
+      background: var(--color1);
       padding: 20px;
     }
     .start-screen button {
