--- a/index.html
+++ b/index.html
@@ -331,9 +331,9 @@
         <div class="header-content">
             <img src="logoferia.jpg" alt="Logo" class="logo-img" onerror="this.src='https://via.placeholder.com/70?text=DB'">
             <div class="header-text">
-                <h1>Docentes Brown</h1>
-                <p class="subtitle">Feria de Emprendedores</p>
-                <span class="refresh-notice"><i class="ph-bold ph-clock"></i> Actualización demora 5 min</span>
+                <h1>Feria de Emprendedores de la Educación</h1>
+                <p class="subtitle">Optimizado por Docente Brown</p>
+                <span class="refresh-notice"><i class="ph-bold ph-clock"></i> Actualización demora 3 min</span>
             </div>
         </div>
     </header>
