--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <img src="logoferia.jpg" alt="Logo" class="logo-img" onerror="this.src='https://via.placeholder.com/70?text=DB'">
             <div class="header-text">
                 <h1>Feria de Emprendedores de la Educación</h1>
-                <p class="subtitle">Optimizado por Docente Brown</p>
+                <p class="subtitle">App creada y optimizada por Docente Brown</p>
                 <span class="refresh-notice"><i class="ph-bold ph-clock"></i> Actualización demora 3 min</span>
             </div>
         </div>
